--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -199,6 +199,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>2.1</version>
         <executions>
 
           <execution>
