--- a/pom.xml
+++ b/pom.xml
@@ -438,7 +438,7 @@
 
     <repository>
       <id>jboss</id>
-      <url>http://repository.jboss.com/maven2/</url>
+      <url>http://repository.jboss.org</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -559,6 +559,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5</version>
         <configuration>
           <debug>true</debug>
           <source>1.6</source>
