--- a/fcrepo-common/pom.xml
+++ b/fcrepo-common/pom.xml
@@ -293,6 +293,18 @@
     <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>mulgara-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>woodstox</groupId>
+          <artifactId>wstx-asl</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>woodstox</groupId>
+      <artifactId>wstx-asl</artifactId>
+      <version>3.2.0</version>
     </dependency>
 
     <dependency>
@@ -339,6 +351,5 @@
       <artifactId>servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
 </project>
