--- a/fcrepo-installer/pom.xml
+++ b/fcrepo-installer/pom.xml
@@ -157,7 +157,7 @@
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>tomcat</artifactId>
-      <version>7.0.100</version>
+      <version>${tomcat.version}</version>
       <type>zip</type>
     </dependency>
 
@@ -212,7 +212,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.16</version>
+      <version>${mysql.version}</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -297,7 +297,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.3-1102-jdbc41</version>
+      <version>${postgresql.version}</version>
       <scope>runtime</scope>
     </dependency>
 
