--- a/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
+++ b/fcrepo-integrationtest/fcrepo-integrationtest-core/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <!-- necessary for javadoc generation -->
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
     
@@ -140,6 +140,12 @@
       <groupId>com.yourmediashelf.fedora.client</groupId>
       <artifactId>fedora-client-core</artifactId>
       <version>0.5</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>fcrepo-common</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 </project>
