--- a/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
+++ b/fcrepo-webapp/fcrepo-webapp-fedora/pom.xml
@@ -224,13 +224,13 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.20</version>
+      <version>${mysql.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>9.3-1102-jdbc41</version>
+      <version>${postgresql.version}</version>
     </dependency>
 
     <dependency>
