--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -578,6 +578,10 @@
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-transports-http</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-rs-service-description</artifactId>
+    </dependency>
 
     <!-- xstream is an optional activemq dependency, required for Stomp -->
     <dependency>
@@ -589,7 +593,8 @@
     <dependency>
       <groupId>org.apache.xbean</groupId>
       <artifactId>xbean-spring</artifactId>
-      <version>3.11.1</version>
+<!--       <version>3.11.1</version> -->
+      <version>3.18</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -688,22 +693,18 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>com.sun.xml.ws</groupId>
@@ -869,11 +870,11 @@
       <artifactId>xercesImpl</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>xml-apis</groupId>
-      <artifactId>xml-apis</artifactId>
-      <version>[1.3.04,2.0)</version>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>xml-apis</groupId> -->
+<!--       <artifactId>xml-apis</artifactId> -->
+<!--       <version>[1.3.04,2.0)</version> -->
+<!--     </dependency> -->
 
     <dependency>
       <groupId>xmlunit</groupId>
