--- a/pom.xml
+++ b/pom.xml
@@ -462,9 +462,9 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-mapper-asl</artifactId>
-        <version>1.9.12</version>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.12.3</version>
       </dependency>
       <dependency>
         <groupId>org.trippi</groupId>
